public class Coordenadas {

    private double latitud;
    private double longitud;

    public Coordenadas(double latitud, double longitud) {
        this.latitud = latitud;
        this.longitud = longitud;
    }

    public double latitud() {
        return latitud;
    }

    public double longitud() {
        return longitud;
    }
}
