public enum Corriente {
    AC,
    DC
}
