public enum Nivel {
    Nivel1,
    Nivel2,
    Nivel3
}
