public enum TipoEstacion {
    Urbana,
    Ruta,
    Mixta
}
